--- a/index.css
+++ b/index.css
@@ -1,3 +1,10 @@
+body{
+    background-color: black;
+    color: white;
+}
+
+
+
 .dropbtn {
     background-color: black;
     color: white;
@@ -5,6 +12,7 @@
     font-size: 16px;
     border: none;
     cursor: pointer;
+    border-radius:5px ;
 }
 
 /* Dropdown button on hover & focus */
